# aishell

./: LICENSE  README.md  pyproject.toml
src/aishell/: aishell_help.py  get_screen.py  main.py  print.py  terminal_parser.py
